Adjust font size in forex template and add margin to currency code for improved layout

--- a/templates/forex_template.html
+++ b/templates/forex_template.html
@@ -131,7 +131,7 @@
         }
 
         .currency-code {
-            font-size: 22px;
+            font-size: 21px;
             font-weight: 700;
             line-height: 25px;
             color: #ffffff;
@@ -144,6 +144,7 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
+            margin-top: 25px;
         }
 
         .currency-arrow {
