Update templates, collectors, and add historical commodity data files

--- a/templates/commodities_m_template.html
+++ b/templates/commodities_m_template.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, maximum-scale=5.0, minimum-scale=0.5">
-    <title>THE DAILY AUD - {{FULL_DATE}}</title>
+    <title>THE AUD TRACKER - {{FULL_DATE}}</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
@@ -221,7 +221,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="title">THE DAILY AUD</div>
+            <div class="title">THE AUD TRACKER</div>
             <div class="subtitle">Daily Finance Updates - Tracking AUD</div>
         </div>
         
